--- a/WebApplication5/Views/Home/Crypt.cshtml
+++ b/WebApplication5/Views/Home/Crypt.cshtml
@@ -61,7 +61,7 @@
 }
 
 
-<h3>Выберите файл для загрузки</h3>
+<h4>Загрузите файл формата <font color="red">txt</font> для шифрования информации в нем</h4>
 
 @using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
