--- a/WebApplication5/Views/Home/CryptWORD.cshtml
+++ b/WebApplication5/Views/Home/CryptWORD.cshtml
@@ -44,8 +44,7 @@
 
 }
 
-
-<h3>Выберите файл для загрузки</h3>
+<h4>Загрузите файл формата <font color="red">docx</font> для шифрования информации в нем</h4>
 
 @using (Html.BeginForm("UploadWORD", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
