--- a/WebApplication5/Views/Home/DecryptWORD.cshtml
+++ b/WebApplication5/Views/Home/DecryptWORD.cshtml
@@ -43,7 +43,7 @@
 }
 
 
-<h3>Выберите файл для загрузки</h3>
+<h4>Загрузите файл формата <font color="red">docx</font> для дешифрования информации в нем</h4>
 
 @using (Html.BeginForm("DeUploadWORD", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
