--- a/WebApplication5/Views/Shared/_Layout.cshtml
+++ b/WebApplication5/Views/Shared/_Layout.cshtml
@@ -17,17 +17,18 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Course proj", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <!-- <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li> -->
-                    <li>@Html.ActionLink("Информация", "About", "Home")</li>
-                    <li>@Html.ActionLink("Связаться", "Contact", "Home")</li>
+                    <!-- <li>Html.ActionLink("Домашняя страница", "Index", "Home")</li> -->
+                    <!--Html.ActionLink("Информация", "About", "Home")</li> -->
                     <li>@Html.ActionLink("Зашифровать", "Crypt", "Home")</li>
                     <li>@Html.ActionLink("Дешифровать", "Decrypt", "Home")</li>
                     <li>@Html.ActionLink("Зашифровать WORD", "CryptWORD", "Home")</li>
                     <li>@Html.ActionLink("Расшифровать WORD", "DecryptWORD", "Home")</li>
+                    <!--Html.ActionLink("Связаться", "Contact", "Home")</li>-->
+
                 </ul>
                 </div>
             </div>
