--- a/WebApplication5/Views/Home/Contact.cshtml
+++ b/WebApplication5/Views/Home/Contact.cshtml
@@ -12,8 +12,9 @@
 </head>
 <body>
     <div>
-        <CENTER>Эбаут</CENTER>
-        <hr width='60%' size=6'>
+
+
+        <img src="~/Images/Александр семенов (1).png" />
     </div>
 
 </body>
