--- a/WebApplication5/Views/Home/Index.cshtml
+++ b/WebApplication5/Views/Home/Index.cshtml
@@ -5,17 +5,11 @@
 
 <html>
 <head>
-    <title>DOWNLOAD </title>
-
+    <title>Index</title>
 </head>
 <body>
     <div>
-
-        <h1>Home, sweet home </h1>
-
-
-
-
+        <img src="~/Images/Александр семенов (1).png" />
     </div>
 </body>
 </html>
