--- a/WebApplication5/Views/Home/Crypt.cshtml
+++ b/WebApplication5/Views/Home/Crypt.cshtml
@@ -60,7 +60,9 @@
     }
 }
 
-
+<br />
+<strong>Шифровка txt файла</strong>
+<hr />
 <h4>Загрузите файл формата <font color="red">txt</font> для шифрования информации в нем</h4>
 
 @using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
@@ -81,8 +83,6 @@
                 <img src="~/Images/ok.PNG" width="38" height="41" /> @result
             </label>
         </h5>
-
-
     }
     else if (isReady == 1)
     {
@@ -102,7 +102,6 @@
     }
 }
 
-
 <html>
 <head>
     <title>Reading Data from a File</title>
@@ -117,7 +116,6 @@
 </head>
 <body>
     <div>
-
         @text
         @if (text == "")
         {
@@ -126,18 +124,14 @@
                 <div class="box1">
                     @foreach (string dataLine in userData)
                     {
-
                         foreach (string dataItem in dataLine.Split(delimiterChar))
                         {
                             @dataItem
                         }
-
-
                     }
                 </div>
             </details>
         }
-
     </div>
 </body>
 </html>
@@ -146,21 +140,17 @@
 {
     if (isReady == 2)
     {
-
         <h4>------------------------------------------------------------------------------------------------------------</h4>
         <h5>Введите ключ:</h5>
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
             <!-- атрибут name такой же как в контроллере у метода параметр -->
-            <input type="text" name="parameterName" id="ls" />
-
+            <input type="text" name="key_crypt_txt" id="ls" />
         </div>
         <br>
         <button type="submit" runat="server" id="btnLogin">Зашифровать!</button>
         //Response.Write("<script>alert('Успешно зашифрован!')</script>");
-
         <br />
-
         if (crypty == "")
         {
 
@@ -178,7 +168,6 @@
             </head>
             <body>
                 <div>
-
                     @crypty
                     @if (crypty == "")
                     {
@@ -199,13 +188,10 @@
                             </div>
                         </details>
                     }
-
                 </div>
             </body>
         </html>
-
     }
-
 }
 else
 {
