--- a/WebApplication5/Views/Home/DecryptWORD.cshtml
+++ b/WebApplication5/Views/Home/DecryptWORD.cshtml
@@ -44,7 +44,7 @@
 
 
 <br />
-<strong>Дешифровка docx файла</strong>
+<strong>  <img src="~/Images/unlocked data.PNG" width="40" height="45" />Дешифровка docx файла</strong>
 <hr />
 <h4>Загрузите файл формата <font color="red">docx</font> для дешифрования информации в нем</h4>
 
