--- a/WebApplication5/Views/DecrTxt/Decrypt.cshtml
+++ b/WebApplication5/Views/DecrTxt/Decrypt.cshtml
@@ -1,40 +1,43 @@
-﻿
-@{
-    ViewBag.Title = "Crypt";
-
-    var text = "";
-    Array userData = null;
-    var result = "";
-    int isReady = 0;
-    Array userData_OUT = null;
+﻿@{
+    ViewBag.Title = "Decrypt";
+    List<string> files = new List<string>();
+    string folderPath = Server.MapPath("~/Files");
+    string[] filePaths = Directory.GetFiles(folderPath, "*.txt");
+    List<string> CollectionFileNames = new List<string>();
+    for (int i = 0; i < filePaths.Length; i++)
+    {
+        CollectionFileNames.Add(Path.GetFileName(filePaths[i]));
+    }
 
     char[] delimiterChar = { ',' };
 
-    var dataFile = Server.MapPath("~/Files/encrypt.txt");
-    var goodFile = Server.MapPath("~/Files/encrypt_out.txt");
+    var chooseFile = Server.MapPath("~/Files/decrypt.txt");
+
+    var result = "";
+    int isReady = 0;
+    Array userData1 = null;
+    Array userData_OUT = null;
+    var goodFile = Server.MapPath("~/Files/decrypt_out.txt");
     string crypty = "";
 
-    if (File.Exists(dataFile))
+    if (File.Exists(chooseFile))
     {
-        userData = File.ReadAllLines(dataFile);
-        if (userData == null)
+        userData1 = File.ReadAllLines(chooseFile);
+        if (userData1 == null)
         {
             // Empty file.
-            text = "Файл пуст.";
             result = "Файл загружен, но он пуст.";
             isReady = 1;
-
         }
         else
         {
-            result = "Файл готов к шифрованию!";
+            result = "Файл готов к дешифровке!";
             isReady = 2;
         }
     }
     else
     {
         // File does not exist.
-        text = " ";
         result = "Файла не существует.";
         isReady = 0;
     }
@@ -46,7 +49,6 @@
         {
             // Empty file.
             crypty = "Файл пуст.";
-
         }
         else
         {
@@ -56,27 +58,24 @@
     {
         // File does not exist.
         crypty = "Файл еще не готов!";
-
     }
+
 }
 
 <br />
 <strong>
-    <img src="~/Images/locked data.PNG" width="40" height="45"/>Шифровка txt файла
+    <img src="~/Images/unlocked data.PNG" width="40" height="45" />Дешифровка txt файла
 </strong>
 <hr />
-<h4>Загрузите файл формата <font color="red">txt</font> для шифрования информации в нем</h4>
+<h4>Загрузите файл формата <font color="red">txt</font> для дешифрования информации в нем</h4>
 
-@using (Html.BeginForm("Upload", "Home", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("DeUpload", "DecrTxt", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
-    <input type="file" name="upload" />
+    <input type="file" name="deupload" />
     <br>
     <input type="submit" value="Загрузить" />
-
 }
-
 <h4>------------------------------------------------------------------------------------------------------------</h4>
-
 @{
     if (isReady == 2)
     {
@@ -104,6 +103,7 @@
     }
 }
 
+
 <html>
 <head>
     <title>Reading Data from a File</title>
@@ -118,27 +118,32 @@
 </head>
 <body>
     <div>
-        @text
-        @if (text == "")
+
+
+        @if (isReady == 2)
         {
             <details>
-                <summary>Исходный текст:</summary>
+                <summary>Текст файла</summary>
                 <div class="box1">
-                    @foreach (string dataLine in userData)
+                    @foreach (string dataLine in userData1)
                     {
+
                         foreach (string dataItem in dataLine.Split(delimiterChar))
                         {
                             @dataItem
                         }
+
+
                     }
                 </div>
             </details>
         }
+
     </div>
 </body>
 </html>
 
-@using (Html.BeginForm("Encrypting", "Home", FormMethod.Post))
+@using (Html.BeginForm("Decrypting", "DecrTxt", FormMethod.Post))
 {
     if (isReady == 2)
     {
@@ -147,12 +152,12 @@
         @Html.AntiForgeryToken()
         <div class="form-horizontal">
             <!-- атрибут name такой же как в контроллере у метода параметр -->
-        <input type="text" name="key_crypt_txt" id="ls" />
+            <input type="text" name="key_decrypt_txt" id="ls" />
+
         </div>
         <br>
-        <button type="submit" runat="server" id="btnLogin">Зашифровать!</button>
-        //Response.Write("<script>alert('Успешно зашифрован!')</script>");
-        <br />
+        <button type="submit" runat="server" id="btnLogin">Расшифровать!</button>
+
         if (crypty == "")
         {
 
@@ -170,12 +175,13 @@
             </head>
             <body>
                 <div>
+
                     @crypty
                     @if (crypty == "")
                     {
                         <h4>------------------------------------------------------------------------------------------------------------</h4>
                         <details>
-                            <summary>Текст в зашифрованном виде: </summary>
+                            <summary>Текст в дешифрованном виде: </summary>
                             <div class="box1">
                                 @foreach (string dataLine in userData_OUT)
                                 {
@@ -190,22 +196,20 @@
                             </div>
                         </details>
                     }
+
                 </div>
             </body>
         </html>
+
     }
 }
-else
-{
-
 }
 
-}
-
-@using (Html.BeginForm("Download", "Home"))
+@using (Html.BeginForm("DeDownload", "DecrTxt"))
 {
     if (crypty == "" && isReady == 2)
-    {   
+    {
+        <h4>------------------------------------------------------------------------------------------------------------</h4>
         <h4>Файл забрать ниже ↓</h4>
         <input type="submit" value="Скачать" />
     }
@@ -213,6 +217,6 @@ else
     {
 
     }
-
 }
+
 
